force-app/main/default/objects/Course__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Enter Duration in  Hours</inlineHelpText>
    <label>Duration</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>