force-app/main/default/objects/Course__c/fields/Relate_Certification__c.field-meta.xml
<CustomField>
    <fullName>Relate_Certification__c</fullName>
    <description>Certification Name relate to the course</description>
    <formula>Certification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Certifation name relate to course</inlineHelpText>
    <label>Relate Certification</label>
    <type>Text</type>
</CustomField>