force-app/main/default/objects/Course__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Active - Only 100 level
Retired - Not essentail</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>